minor change with hero banner, changed element

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
 <!-- Hero Banner-->
-    <div class="hero"></div>
+    <section class="hero"></section>
 
 <!-- Main Section-->
     <main class="content">
