--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- Main Section-->
     <main class="content">
         <!-- First Panel-->
-        <article class="search-engine-optimization">
+        <article class="section-panel">
             <img src="Develop/assets/images/search-engine-optimization.jpg" class="float-left" alt="The Search Engine Optimization Plan" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -40,7 +40,7 @@
             </p>
         </article>
         <!-- Second Panel-->
-        <article id="online-reputation-management" class="online-reputation-management" alt="Online Reputation Management">
+        <article id="online-reputation-management" class="section-panel" alt="Online Reputation Management">
             <img src="Develop/assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -48,7 +48,7 @@
             </p>
         </article>
         <!-- Third Panel-->
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="section-panel">
             <img src="Develop/assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Marketing" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -59,21 +59,21 @@
 
 <!-- Side Panel-->
     <aside class="benefits">
-        <section class="benefit-lead">
+        <section class="benefit-text">
             <h3>Lead Generation</h3>
             <img src="Develop/assets/images/lead-generation.png" alt="Lead Generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefit-text">
             <h3>Brand Awareness</h3>
             <img src="Develop/assets/images/brand-awareness.png" alt="Brand Awarness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit-text">
             <h3>Cost Management</h3>
             <img src="Develop/assets/images/cost-management.png" alt="Cost Management" />
             <p>
