--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <main class="content">
         <!-- First Panel-->
         <article class="section-panel">
-            <img src="Develop/assets/images/search-engine-optimization.jpg" class="float-left" alt="The Search Engine Optimization Plan" />
+            <img src="Develop/assets/images/search-engine-optimization.jpg" class="float-left" alt="A book on a table with the SEO plan mockup" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
         <!-- Second Panel-->
-        <article id="online-reputation-management" class="section-panel" alt="Online Reputation Management">
+        <article id="online-reputation-management" class="section-panel" alt="A person on a phone and a laptop">
             <img src="Develop/assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -49,7 +49,7 @@
         </article>
         <!-- Third Panel-->
         <article id="social-media-marketing" class="section-panel">
-            <img src="Develop/assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Marketing" />
+            <img src="Develop/assets/images/social-media-marketing.jpg" class="float-left" alt="A team meeting coming up with different idead" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -61,21 +61,21 @@
     <aside class="benefits">
         <section class="benefit-text">
             <h3>Lead Generation</h3>
-            <img src="Develop/assets/images/lead-generation.png" alt="Lead Generation"/>
+            <img src="Develop/assets/images/lead-generation.png" alt="Strategy icon"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="benefit-text">
             <h3>Brand Awareness</h3>
-            <img src="Develop/assets/images/brand-awareness.png" alt="Brand Awarness"/>
+            <img src="Develop/assets/images/brand-awareness.png" alt="Idea icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="benefit-text">
             <h3>Cost Management</h3>
-            <img src="Develop/assets/images/cost-management.png" alt="Cost Management" />
+            <img src="Develop/assets/images/cost-management.png" alt="Cost Management icon" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
